# test_task_anverali

./: .database.env.example  .env.example  .env.tests  .env.tests.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  openapi.yaml  pyproject.toml  setup.cfg
.github/workflows/: boilerplate.yml
docker/app/: Dockerfile
test_task_anverali/: db.py  main.py
test_task_anverali/admin/: user.py
test_task_anverali/admin/mixins/: __init__.py  access.py
test_task_anverali/admin/views/: admin_index.py  role.py  user.py
test_task_anverali/conf/: __init__.py  base.py  dev.py  logs.py
test_task_anverali/libs/: auth.py  core.py  db_requests.py  decorators.py
test_task_anverali/migrations/: env.py
test_task_anverali/migrations/versions/: 227bd0f9f776_init.py  2ed33cefed12_init.py
test_task_anverali/models/: __init__.py  roles.py  user.py  users_customer_settings.py  users_executor_settings.py
test_task_anverali/routes/: __init__.py  auth.py  home.py  profile.py  user.py
test_task_anverali/routes/schemas/: __init__.py  login.py  user.py
test_task_anverali/routes/templates/: base.html  customer_profile.html  default.html  executor_profile.html  login.html  registration.html
tests/: conftest.py  test_reg_and_auth.py
